SM-2173: Home button overlapping issue fix

--- a/web/micro-ui-internals/packages/css/src/pages/employee/index.scss
+++ b/web/micro-ui-internals/packages/css/src/pages/employee/index.scss
@@ -137,6 +137,7 @@
     }
     a {
       display: flex;
+      margin-top: 20px;
     }
     .sidebar-link {
       display: flex;
